--- a/index.html
+++ b/index.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html>
 
-  <head><!-- where all the meta data will go, like and files we need to include -->
+  <head>
+    <link rel="stylesheet" type="text/css" href="main.css"/>
     <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
   </head>
 
   <body><!-- the body element is where everything we will see on the page will go -->
 
     <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
+    <div id="red"> {border-top-color: #f00;} <!-- the grandest grandparent div -->
+      <div id="orange"> {border-top-color: #ffa500}
+        <div id="yellow"> {border-top-color: #ff0}
+          <div id="green"> {border-top-color: #00bc3f}
+            <div id="blue"> {border-top-color: #06f}
+              <div id="indigo"> {border-top-color: #8a2be2}
+                <div id="violet"> {border-top-color: #d300c9} </div> <!-- the grandest child div -->
               </div>
             </div>
           </div>
